# measurement-data

./: .gitignore  jupyter_job.sh  results  status.py  sync.sh
backup/: tidy.py
lib/: .gitignore
lib/SymED/: .gitignore
lib/SymED/src/: SymED.jl  run.jl
lib/SymMps/: .gitmodules  Manifest.toml
lib/SymMps/scripts/: compute_swap_correlations.jl  compute_z_correlations.jl  plot.jl  test_interleaved.jl
lib/SymMps/tests/: test_correlations.jl
lib/experimental/symED/: Manifest.toml  Project.toml
lib/measurement_analysis/: .stat_mech.py.swo  pyproject.toml
lib/measurement_analysis/measurement_analysis/: .stat_mech.py.swm  .stat_mech.py.swn  .stat_mech.py.swo  .tebdm.py.swn  .tebdm.py.swo  __init__.py  stat_mech.py  tebdm.py  unmeasured_percolation.py
lib/nonsymED/: README.md  pyproject.toml
lib/nonsymED/nonsymED/: nonsymed.py  (+5 more)
lib/stat_mech/: get_states.py  read_states.py  tebdm.py
lib/symMPS/: .gitignore  Project.toml
lib/u1ED/: pyproject.toml
logs/: 4196278
mpi_test/: .test.py.swo  .test.py.swp
mpi_test/logs/: 4202924  4203516
notebooks/: Untitled.ipynb  charges.ipynb  measurement_records.py  results  romain_expm.ipynb
notebooks/.ipynb_checkpoints/: charges-checkpoint.ipynb  romain_expm-checkpoint.ipynb
notebooks/measurement_analysis/: environment.yml  romain_expm.py
processed_data/: read.py
sub/big_decode/: decode.py  get_param_sweep.py  launcher_script.sh  param_sweep  test.py
sub/generate_data/: .gitignore  collate.py  generate_param_sweep.py  generate_param_sweep_new.py  launcher_script.sh  param_sweep  remaining  run.py  scrtch
(+108 files in other folders)
