[tool.poetry]
name = "measurement_analysis"
version = "0.1.0"
description = ""
authors = ["fergus barratt <fergus.barratt00@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
